use flex instead of float to align items to ensure they are displayed in the correct order

--- a/src/components/Modal/modal.module.scss
+++ b/src/components/Modal/modal.module.scss
@@ -12,7 +12,7 @@
   background-color: variables.$blue-lightgray-color;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  align-items: flex-end;
   box-sizing: border-box;
   padding: variables.$inner-spacing;
   overflow: hidden;
@@ -23,15 +23,14 @@
   }
 
   .actions {
-    width: 100%;
     max-height: max-content;
-    min-width: max-content;
+    max-width: max-content;
+    float: right;
 
     button {
       background-color: transparent;
       padding: 0;
       padding-left: 10px;
-      float: right;
       svg {
         font-size: 18px;
         color: variables.$black-color;
